# pCobra

./: .codecov.yml  .coveragerc  .env.example  .flake8  .gitattributes  .gitignore  .readthedocs.yaml  .replit  .ruff.toml  AGENTS.md  CHANGELOG.md  CHATGPT_WRITE_ACCESS_TEST.md  CONTRIBUTING.md  INFORME_AUDITORIA_PCOBRA_2026-07-15.md  MANIFEST.in  MANUAL_COBRA.md  Makefile  README.md  README_en.md  ROADMAP.md  SPEC_COBRA.md  arbol_directorios.txt  arbol_directorios_limpio.txt  arbol_limpio.txt  bench_results.json  check.py  clean.ps1  cls  cobra-cli.spec  cobra.mod  cobra.toml  conftest.py  docs_checklist_pre_merge_bug001.md  gitleaks.toml  informe_tecnico_binding_runtime_usar.md  install.sh  main.py  make.bat  module_map.yaml  my_ast.py  (+18 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  doc_improvement.md  feature_request.md  hackathon_evento.md
.github/codeql/: codeql-config.yml
.github/workflows/: build-binaries.yml  build-exe.yml  change-proposal.yml  ci.yml  codeql.yml  dependency-update.yml  docker.yml  lint.yml  pages.yml  pr-labeler.yml  release-binaries.yml  release.yml  runtime-stabilization-contract.yml  test.yml  validate-workflows.yml
.venv-release-test/: pyvenv.cfg
.venv-release-test/Scripts/: activate  activate.bat
archive/retired_targets/: README.md
backend/: README.md  __init__.py
backend/corelibs/: __init__.py  archivo.py  red.py  seguridad.py  sistema.py  texto.py  tiempo.py
backend/src/: __init__.py
binder/: requirements.txt
bindings/: __init__.py  contract.py
casos_reales/analisis_datos/: README.md
casos_reales/bioinformatica/: README.md
casos_reales/inteligencia_artificial/: README.md
changelog/: add.md  export-feature.md
cli/: __init__.py
cobra/: __init__.py
cobra/cli/: __init__.py  cli.py
core/: __init__.py
corelibs/: __init__.py
data/: language_equivalence.yml  language_equivalence_backlog.md  language_equivalence_baseline.yml  language_equivalence_downgrades.yml
docker/: Dockerfile
docker/backends/: cpp.Dockerfile  javascript.Dockerfile  js.Dockerfile  python.Dockerfile  rust.Dockerfile
docker/scripts/: build.sh  compile_cpp.sh  compile_rust.sh
docs/: LIBRO_PROGRAMACION_COBRA.md  MANUAL_COBRA.md  MANUAL_COBRA.rst  README.en.md  ROADMAP.md  SPEC_COBRA.md  arquitectura_parser_transpiladores.md  bindings_runtime_contract.md  blog_minilenguaje.md  cache_incremental.md  casos_reales.md  cheatsheet.tex  cobra_installer.md  cobrahub_paquetes.md  comunidad.md  conf.py  config_cli.md  construcciones_llvm_ir.md  contrato_runtime_holobit.md  contribucion.md  coverage.md  diagnostico_runtime_repl.md  diagrama_ast.md  especificacion_tecnica.md  estructura_ast.md  evento_hackathon.md  flujo_compilacion.md  genericos.md  gramatica.ebnf  gui_idle.md  gui_idle_especificacion.md  gui_idle_trazabilidad.md  guia_basica.md  instalacion.md  interfaces.md  inventario_usar_modulos.md  language_equivalence_matrix.md  lenguajes.rst  lenguajes_soportados.rst  library_compatibility_matrix.md  (+21 more)
docs/ADR/: 000-nuevas_features.md  001-backend-pipeline-facade.md  002-motor-ia-sugerencias-agix.md
docs/_generated/: audit_stdlib_parity_report.md  cli_backend_examples.rst  official_targets_table.rst  reverse_scope_table.rst  runtime_api_matrix.json  runtime_api_matrix.md  runtime_capability_matrix.rst  stdlib_contract_matrix.json  stdlib_contract_matrix.md  target_policy_runtime_split.md  target_policy_status_table.md  target_policy_summary.md  target_policy_summary.rst  target_policy_tiers.md
docs/anexos_legacy_internal/: README.md
docs/api/: modules.rst  (+49 more)
examples/: README.md  clase_metodo_atributo.co  clase_metodo_atributo.cobra  funciones_principales.cobra  main.cobra  main.m  main.py  patrones.cobra  rel_example.py  smoke_assign.co  smoke_assign.cobra
experiments/: README.md  llvm_backend.py
issues/: 02_executables_distribucion.md  03_optimizar_modo_seguro.md  04_ejemplos_avanzados.md  06_soporte_jupyter.md  07_opt_ast.md  08_pruebas_concurrencia.md  09_cache_ast_checksum.md  10_transpilacion_paralela.md  11_soporte_condicionales_bucles_go_java.md  12_tipos_nuevos.md  13_sintaxis_azucarada.md
notebooks/: benchmarks_resultados.ipynb  ejemplo_basico.ipynb  ide_demo.ipynb  playground.ipynb
pCobra/: __init__.py  cli.py
pcobra/: __init__.py
reports/: qa_bom_validacion_2026-05-24.md  qa_validacion_2026-05-11.md  release_evidence_2026-05-24.md
scripts/: audit_retired_targets.py  build_cli.ps1  build_cli.sh  bump_version.py  check.py  check_changelog.py  check_requirements_drift.sh  generar_contrato_stdlib.py  generar_manual_ref.py  generar_matriz_api_runtime.py  generar_matriz_transpiladores.py  generar_pdoc.py  generate_target_policy_docs.py  grammar_coverage.py  hello_clang.py  install_dev.sh  lint_legacy_aliases.py  lint_policy_drift.py  migrar_cache_sqliteplus.py  publicar_blog.sh  run.sh  run_mutation.py  smoke_syntax.py  smoke_transpilers_syntax.py  sync_libro_programacion.py  sync_readme_version.py  sync_requirements.sh  targets_policy_common.py  test.sh  test_llvm_examples.py  test_pyinstaller.sh  validate_runtime_contract.py  validate_targets_policy.py
source/: caracteristicas.rst  conf.py  index.rst  modulos_nativos.rst  referencia.rst  sintaxis.rst
src/: __init__.py  cli.py  main.py  main_init.py  poc_data_filter_callback.cobra
standard_library/: __init__.py  archivo.py  logica.py
tests/: conftest.py  test_backend_startup_policy.py  test_cli.py  test_cli_entrypoint_imports.py  test_cobra_extension_contract.py  test_codeql_config.py  test_corelibs_argumentos.py  test_corelibs_compresion.py  test_corelibs_proceso.py  test_corelibs_ruta.py  test_corelibs_temporal.py  test_ejemplos_io.py  test_interactive_cmd_no_console.py  test_legacy_import_aliases.py  test_lexer.py  test_lexer_parser_contract.py  test_packaging_metadata.py  test_parser.py  test_tooling_excludes.py  test_transpilers.py  test_unified_ecosystem_plan.py  test_usar_public_exports_snapshot.py  test_workflows_yaml.py
venv-testpypi/: pyvenv.cfg
(+2522 files in other folders)
