[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcobra"
version = "10.1.1"
description = "Un lenguaje de programación en español para simulaciones y más."
authors = [ {name = "Adolfo González Hernández", email = "adolfogonzal@gmail.com"} ]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["cobra", "lenguaje", "cli"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Política Python >=3.11: dependencias compatibles con el ecosistema actual
# y con agix>=1.9.0,<2. Evitamos rangos inexistentes o demasiado futuros.
dependencies = [
    "numpy>=1.26,<2.2",
    "scipy>=1.13,<1.14",
    "matplotlib>=3.10,<4",
    "pandas>=2.3,<3",
    "agix>=1.9.0,<2",
    "chardet>=5.2,<6",
    "holobit-sdk>=1.0.8,<2",
    "smooth-criminal>=0.8.0,<1",
    "tomli>=2.0,<3",
    "PyYAML>=6.0,<7",
    "jsonschema>=4.23,<5",
    "python-dotenv>=1.0,<2",
    "pexpect>=4.9,<5",
    "requests>=2.32,<3",
    "flet>=0.28.3,!=0.29.*,<0.86",
    "packaging>=24,<26",
    "pybind11>=2.13,<3",
    "tree-sitter>=0.25,<0.26",
    "tree-sitter-javascript>=0.25,<0.26",
    "tree-sitter-java>=0.23.5,<0.24",
    "RestrictedPython>=8.0,<9",
    "prompt_toolkit>=3.0.52,<4",
    "Pygments>=2.19,<3",
    "argcomplete>=3.6,<4",
    "httpx>=0.28,<0.29",
    "lark>=1.3.1,<2",
    "rich>=14,<16",
    "sympy>=1.13,<2",
]

[project.urls]
Documentation = "https://github.com/Alphonsus411/pCobra#readme"
Source = "https://github.com/Alphonsus411/pCobra"

[project.optional-dependencies]
excel = ["openpyxl>=3.1.5,<4"]
columnar = ["pyarrow>=24,<25"]
io-binary = ["pyarrow>=24,<25"]
lsp = ["python-lsp-server>=1.14.0,<2"]
ml = [
    "tensorflow>=2.21.0,<3",
    "DEAP>=1.4.4,<2",
]
big-data = ["dask>=2026.3.0,<2027"]
mutation = ["mutpy==0.6.1"]
notebooks = [
    "papermill>=2.7.0,<3",
    "nbconvert>=7.17.1,<8",
    "ipykernel>=7.2.0,<8",
]
docs = [
    "sphinx>=9.1.0,<9.2",
    "sphinx-rtd-theme>=3.1.0,<4",
    "myst-parser>=5.1.0,<6",
    "sphinxcontrib-plantuml>=0.31,<1",
]
dev = [
    "python-dotenv>=1.2.2,<2",
    "python-lsp-server>=1.14.0,<2",
    "hypothesis>=6.141,<7",
    "ipykernel>=7.2.0,<8",
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1,<8",
    "pytest-timeout>=2.4,<3",
    "ruff>=0.15,<0.16",
    "mypy>=2.1.0,<3",
    "pip-tools>=7.5,<8",
]

[tool.setuptools]
include-package-data = true
# Fuente canónica runtime/publicada: únicamente `src/pcobra`.
# Política reforzada de imports internos: todo código bajo `src/pcobra/**` debe
# importar vía `pcobra.cobra.*` (o import relativo dentro de `pcobra`).
# Los shims de raíz (`src/cobra`, `src/core`, `src/bindings` y análogos fuera de
# `src/pcobra`) son compatibilidad interna, están deprecados y NO son contrato
# de distribución/publicación en PyPI.
package-dir = {"" = "src"}

[tool.setuptools.exclude-package-data]
"*" = [
    "docs/historico/*",
    "docs/experimental/*",
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "pcobra*",
]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests",
    "tests.*",
    "*.test",
    "*.test.*",
    "*.stubs",
    "*.stubs.*",
]

[project.scripts]
cobra = "pcobra.cli:main"

[project.entry-points."cobra.plugins"]
# Se registrarán plugins externos aquí

[project.entry-points."cobra.transpilers"]
# Se registrarán transpiladores externos aquí

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["pcobra"]

[tool.ruff]
exclude = [
    "docs/frontend",
    "docs/build",
    "tests",
    "notebooks",
    "venv",
    ".venv",
    ".venv-release-test",
    "venv-testpypi",
    "dist",
    "build",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
ignore = []

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = "^(docs/build/|docs/frontend/|venv/|\\.venv/|\\.venv-release-test/|venv-testpypi/|tests/|build/|dist/|examples/|notebooks/)"
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
warn_return_any = true
strict_optional = true
disallow_untyped_defs = true

[tool.pyright]
include = ["src/pcobra"]
exclude = [
    "docs/build",
    "docs/frontend",
    "venv",
    ".venv",
    "dist",
    "build",
    "tests",
]
ignore = []
reportMissingImports = false
reportMissingTypeStubs = false
pythonVersion = "3.11"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
markers = [
    "timeout: tiempo máximo de ejecución de una prueba",
    "slow: pruebas lentas",
    "integration: pruebas de integración",
    "parity_contract: pruebas contractuales de paridad bloqueantes entre run script y REPL",
    "fuzz: pruebas de mutación/fuzzing",
    "performance: pruebas de rendimiento",
    "experimental: pruebas best-effort o manuales fuera del contrato oficial de runtime",
    "windows: pruebas específicas de Windows",
    "asyncio: pruebas que utilizan bucles de eventos asíncronos",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--capture=fd",
    "--show-capture=all",
    "--durations=10",
    "--maxfail=5",
]

norecursedirs = [
    "dist",
    "build",
    ".venv",
    "venv",
    ".venv-release-test",
    "venv-testpypi",
    "docs/frontend",
    "docs/build",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "venv/*",
    "tests/*",
]
branch = true

[tool.coverage.report]
fail_under = 85
