[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcobra"
version = "10.1.1"
description = "Un lenguaje de programación en español para simulaciones y más."
authors = [ {name = "Adolfo González Hernández", email = "adolfogonzal@gmail.com"} ]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["cobra", "lenguaje", "cli"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Política Python >=3.9: las dependencias se fijan al tramo más reciente que
# conserva soporte para 3.9. No se usan los rangos más nuevos de Python >=3.11
# cuando la versión publicada del paquete declara Requires-Python >=3.10/3.11.
dependencies = [
    "numpy>=2.0.2,<2.1",
    "scipy>=1.13.1,<1.14",
    "matplotlib>=3.9.4,<3.10",
    "pandas>=2.3.3,<3",
    "agix>=1.4,<1.5",
    "chardet>=5.2,<6",
    "holobit-sdk>=1.2,<2; python_version >= '3.10'",
    "smooth-criminal>=0.8,<1",
    "tomli>=2.4,<3",
    "PyYAML>=6.0.3,<7",
    "jsonschema>=4.25.1,<4.26",
    "python-dotenv>=1.2.1,<1.2.2",
    "pexpect>=4.9,<5",
    "requests>=2.32.5,<2.33",
    "flet>=0.28.3,<0.29",
    # agix pulls FastAPI transitively; keep it on the newest Python 3.9-compatible line.
    "fastapi>=0.128.8,<0.129",
    "packaging>=26,<27",
    "pybind11>=3.0,<4",
    "tree-sitter>=0.23.2,<0.24",
    "RestrictedPython>=8.1,<8.2",
    "prompt_toolkit>=3.0.52,<4",
    "Pygments>=2.20,<3",
    "argcomplete>=3.6.3,<4",
    "httpx>=0.28.1,<0.29",
    "lark>=1.3.1,<2",
    "rich>=15,<16",
    "sympy>=1.14,<2",
]

[project.urls]
Documentation = "https://github.com/Alphonsus411/pCobra#readme"
Source = "https://github.com/Alphonsus411/pCobra"

[project.optional-dependencies]
excel = ["openpyxl>=3.1.5,<4"]
columnar = ["pyarrow>=21,<22"]
io-binary = ["pyarrow>=21,<22"]
lsp = ["python-lsp-server~=1.13"]
ml = [
    "tensorflow>=2.20,<2.21",
    "DEAP>=1.4.4,<2",
]
big-data = ["dask>=2024.8,<2024.9"]
mutation = ["mutpy==0.6.1"]
notebooks = [
    "papermill>=2.6,<2.7",
    "nbconvert>=7.17,<8",
    "ipykernel>=6.31,<7",
]
docs = [
    "sphinx>=7.4,<8",
    "sphinx-rtd-theme~=2.0",
    "myst-parser~=3.0",
    "sphinxcontrib-plantuml~=0.30",
]
dev = [
    "python-dotenv~=1.1",
    "python-lsp-server~=1.13",
    "hypothesis>=6.141,<7",
    "ipykernel>=6.31,<7",
    "tree-sitter-languages~=1.10",
    "pytest>=8.4,<9",
    "pytest-cov>=7.1,<8",
    "pytest-timeout>=2.4,<3",
    "ruff>=0.15,<0.16",
    "mypy>=1.19,<2",
    "pip-tools>=7.5,<8",
]

[tool.setuptools]
include-package-data = true
# Fuente canónica runtime/publicada: únicamente `src/pcobra`.
# Política reforzada de imports internos: todo código bajo `src/pcobra/**` debe
# importar vía `pcobra.cobra.*` (o import relativo dentro de `pcobra`).
# Los shims de raíz (`src/cobra`, `src/core`, `src/bindings` y análogos fuera de
# `src/pcobra`) son compatibilidad interna, están deprecados y NO son contrato
# de distribución/publicación en PyPI.
package-dir = {"" = "src"}

[tool.setuptools.exclude-package-data]
"*" = [
    "docs/historico/*",
    "docs/experimental/*",
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "pcobra*",
]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests",
    "tests.*",
    "*.test",
    "*.test.*",
    "*.stubs",
    "*.stubs.*",
]

[project.scripts]
cobra = "pcobra.cli:main"

[project.entry-points."cobra.plugins"]
# Se registrarán plugins externos aquí

[project.entry-points."cobra.transpilers"]
# Se registrarán transpiladores externos aquí

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["pcobra"]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    "docs/frontend",
    "docs/build",
    "tests",
    "notebooks",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
ignore = []

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
exclude = "^(docs/build/|docs/frontend/|venv/|.venv/|tests/|build/|dist/|examples/|notebooks/)"
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
warn_return_any = true
strict_optional = true
disallow_untyped_defs = true

[tool.pyright]
include = ["src/pcobra"]
exclude = [
    "docs/build",
    "docs/frontend",
    "venv",
    ".venv",
    "dist",
    "build",
    "tests",
]
ignore = []
reportMissingImports = false
reportMissingTypeStubs = false
pythonVersion = "3.9"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
markers = [
    "timeout: tiempo máximo de ejecución de una prueba",
    "slow: pruebas lentas",
    "integration: pruebas de integración",
    "parity_contract: pruebas contractuales de paridad bloqueantes entre run script y REPL",
    "fuzz: pruebas de mutación/fuzzing",
    "performance: pruebas de rendimiento",
    "experimental: pruebas best-effort o manuales fuera del contrato oficial de runtime",
    "windows: pruebas específicas de Windows",
    "asyncio: pruebas que utilizan bucles de eventos asíncronos",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--capture=fd",
    "--show-capture=all",
    "--durations=10",
    "--maxfail=5",
]
norecursedirs = [
    "dist",
    "build",
    ".venv",
    "venv",
    "docs/frontend",
    "docs/build",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "venv/*",
    "tests/*",
]
branch = true

[tool.coverage.report]
fail_under = 85
